--- a/jobs/dockerweb/jenkinsfile
+++ b/jobs/dockerweb/jenkinsfile
@@ -22,7 +22,7 @@ pipeline {
             steps {
                 script{
                     sh ''' 
-                         docker stop ${name_final}
+                        sudo docker stop ${name_final}
                     '''
                     }
                     
@@ -34,7 +34,7 @@ pipeline {
             steps {
                 script{
                     sh ''' 
-                    docker build    jobs/dockerweb/ -t ${name_imagen}:${tag_imagen}
+                    sudo docker build    jobs/dockerweb/ -t ${name_imagen}:${tag_imagen}
                     '''
                     }
                     
@@ -45,7 +45,7 @@ pipeline {
             steps {
                 script{
                     sh ''' 
-                        docker run -dp ${puerto_imagen}:80 --name ${name_final} ${name_imagen}:${tag_imagen}
+                       sudo docker run -dp ${puerto_imagen}:80 --name ${name_final} ${name_imagen}:${tag_imagen}
  
                     '''
                     }
